--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="main-header">
         <h1>FIGURAS LITERARIAS & RETÓRICAS</h1>
-        <button id="theme-toggle" class="theme-toggle-btn">Tema</button>
+        <button id="theme-toggle" class="theme-toggle-btn">Fondo</button>
     </header>
 
     <!-- ========= NUEVA SECCIÓN INTRODUCTORIA ========= -->
