--- a/modulos/simil.html
+++ b/modulos/simil.html
@@ -48,7 +48,7 @@
     <header class="main-header">
         <a href="../index.html" class="back-link">&larr; Volver al inicio</a>
         <h1>Símil o Comparación</h1>
-        <button id="theme-toggle" class="theme-toggle-btn">Cambiar Tema</button>
+        <button id="theme-toggle" class="theme-toggle-btn">Fondo</button>
     </header>
 
     <main class="container" id="module-content">
