--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             
             <div class="intro-grid">
                 <div class="intro-card">
-                    <h3>¿Qué son?</h3>
+                    <h3>¿Qué son la figuras literarias y/o retóricas?</h3>
                     <p>Son formas no convencionales de utilizar las palabras para dotarlas de mayor expresividad, vivacidad o belleza, con el fin de sorprender, emocionar o sugerir.</p>
                 </div>
                 <div class="intro-card">
