--- a/index.html
+++ b/index.html
@@ -65,6 +65,20 @@
                 <h3>Símil o Comparación</h3>
                 <p>Domina el arte de la comparación explícita creando vínculos claros con el poder del "como".</p>
             </a>
+            <a href="modulos/hiperbole.html" class="module-card fade-in">
+                <h3>Hipérbole</h3>
+                <p>Explora el arte de la exageración para un impacto inolvidable.</p>
+            </a>
+            
+            <a href="modulos/personificacion.html" class="module-card fade-in">
+                <h3>Personificación</h3>
+                <p>Descubre cómo dar vida y voz a lo inanimado.</p>
+            </a>
+            
+            <a href="modulos/aliteracion.html" class="module-card fade-in">
+                <h3>Aliteración</h3>
+                <p>Siente el poder de la música y el ritmo en las palabras.</p>
+            </a>
             <!-- Aquí agregarás los nuevos módulos -->
         </section>
     </main>
