--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 
         /* === Estilos para el MODO OSCURO === */
         body.dark-mode .intro-logo {
-            border-color: #444; /* Borde del logo en modo oscuro */
+            border-color: #007bff; /* Borde del logo en modo oscuro */
         }
         
         body.dark-mode #module-search {
             background-color: #333;
             color: #f4f4f4;
-            border-color: #555;
+            border-color: #007bff;
         }
     </style>
 </head>
