--- a/modulos/metafora.html
+++ b/modulos/metafora.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Módulo: Metáfora</title>
+    <title>Metáfora</title>
 
     <!-- El CSS se mantiene exactamente igual -->
     <style>
