--- a/modulos/onomatopeya.html
+++ b/modulos/onomatopeya.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Módulo: Onomatopeya</title>
+    <title>Onomatopeya</title>
 
     <!-- El CSS es idéntico para mantener la consistencia -->
     <style>
@@ -48,7 +48,7 @@
     <header class="main-header">
         <a href="../index.html" class="back-link">&larr; Volver al inicio</a>
         <h1>Onomatopeya</h1>
-        <button id="theme-toggle" class="theme-toggle-btn">Cambiar Tema</button>
+        <button id="theme-toggle" class="theme-toggle-btn">Modo</button>
     </header>
 
     <main class="container" id="module-content">
