--- a/modulos/simil.html
+++ b/modulos/simil.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Módulo: Símil o Comparación</title>
+    <title>Símil o Comparación</title>
 
     <!-- El CSS es idéntico al del módulo de Metáfora para mantener la consistencia -->
     <style>
@@ -46,7 +46,7 @@
 <body>
 
     <header class="main-header">
-        <a href="../index.html" class="back-link">&larr; Volver al inicio</a>
+        <a href="../index.html" class="back-link">&larr; Volver</a>
         <h1>Símil o Comparación</h1>
         <button id="theme-toggle" class="theme-toggle-btn">Modo</button>
     </header>
