--- a/modulos/onomatopeya.html
+++ b/modulos/onomatopeya.html
@@ -46,7 +46,7 @@
 <body>
 
     <header class="main-header">
-        <a href="../index.html" class="back-link">&larr; Volver al inicio</a>
+        <a href="../index.html" class="back-link">&larr; Volver</a>
         <h1>Onomatopeya</h1>
         <button id="theme-toggle" class="theme-toggle-btn">Modo</button>
     </header>
