--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         /* --- Estilos para la imagen responsiva de la sección "Dato Curioso" --- */
         .feature-image img {
             max-width: 100%;      /* La imagen no superará el ancho de su contenedor */
-            height: 80%;         /* Mantiene la proporción de la imagen */
+            height: 450px;         /* Mantiene la proporción de la imagen */
             display: block;       /* Elimina espacios extra debajo de la imagen */
             border-radius: 22px;  /* Bordes redondeados como se solicitó */
         }
