--- a/index.html
+++ b/index.html
@@ -129,8 +129,6 @@
                 <h3>Aliteración</h3>
                 <p>Siente el poder de la música y el ritmo en las palabras.</p>
             </a>
-            <!-- Dentro de la sección .module-grid en index.html -->
-
             <a href="modulos/onomatopeya.html" class="module-card fade-in">
                 <h3>Onomatopeya</h3>
                 <p>Escucha las palabras que imitan la realidad del sonido.</p>
@@ -144,6 +142,20 @@
             <a href="modulos/elipsis.html" class="module-card fade-in">
                 <h3>Elipsis</h3>
                 <p>Aprende el arte de omitir palabras para ganar agilidad y potencia.</p>
+            </a>
+            <a href="modulos/metonimia.html" class="module-card fade-in">
+                <h3>Metonimia</h3>
+                <p>Designa una idea a través de su relación de proximidad o causa.</p>
+            </a>
+            
+            <a href="modulos/sinecdoque.html" class="module-card fade-in">
+                <h3>Sinécdoque</h3>
+                <p>Comprende cómo una parte puede representar al todo (y viceversa).</p>
+            </a>
+            
+            <a href="modulos/oximoron.html" class="module-card fade-in">
+                <h3>Oxímoron</h3>
+                <p>Encuentra el sentido profundo en la unión de dos opuestos.</p>
             </a>
         </section>
     </main>
