--- a/modulos/oximoron.html
+++ b/modulos/oximoron.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Módulo: Oxímoron</title>
+    <title>Oxímoron</title>
 
     <!-- El CSS es idéntico para mantener la consistencia -->
     <style>
@@ -46,9 +46,9 @@
 <body>
 
     <header class="main-header">
-        <a href="../index.html" class="back-link">&larr; Volver al inicio</a>
+        <a href="../index.html" class="back-link">&larr; Volver</a>
         <h1>Oxímoron</h1>
-        <button id="theme-toggle" class="theme-toggle-btn">Cambiar Tema</button>
+        <button id="theme-toggle" class="theme-toggle-btn">Modo</button>
     </header>
 
     <main class="container" id="module-content">
