--- a/modulos/metafora.html
+++ b/modulos/metafora.html
@@ -95,7 +95,7 @@
         </section>
 
         <section class="module-section">
-            <h2><i class="fa-solid fa-book-bible"></i>3. Metáforas en la Biblia (Reina Valera 1960)</h2>
+            <h2><i class="fa-solid fa-book"></i>3. Metáforas en la Biblia (Reina Valera 1960)</h2>
             <div class="bible-example">
                 <em>"Yo soy la <mark>luz</mark> del mundo; el que me sigue, no andará en tinieblas, sino que tendrá la luz de la vida." (Juan 8:12)</em>
                 <p><i class="fa-solid fa-magnifying-glass-chart"></i><strong>Análisis:</strong> Jesús (Término Real) se identifica como "la luz" (Término Imaginario). La semejanza es que la luz guía, revela la verdad y disipa la oscuridad, que a su vez es una metáfora de la ignorancia y el pecado.</p>
