--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </a>
             <a href="modulos/anafora.html" class="module-card fade-in" data-category="retorica">
                 <h3>Anáfora</h3>
-                <div class="badges-container"><span class="badge-pill retorica">Retórica</span></div>
+                <div class="badges-container"><span class="badge-pill retorica">Retórica</span> <span class="badge-pill retorica">Sermón</span></div>
                 <p>Siente el ritmo y la fuerza de la repetición deliberada.</p>
             </a>
             <a href="modulos/elipsis.html" class="module-card fade-in" data-category="literaria retorica">
