--- a/modulos/metafora.html
+++ b/modulos/metafora.html
@@ -23,7 +23,7 @@
         .theme-toggle-btn { background-color: var(--accent-color); color: white; border: none; padding: 0.5rem 1rem; border-radius: 5px; cursor: pointer; font-size: 1rem; width: 45px; text-align: center; }
         .main-footer { text-align: center; padding: 1rem; margin-top: 2rem; }
         .container { max-width: 1080px; margin: 2rem auto; padding: 0 1rem; }
-        .module-section { padding: 2rem; border-radius: 8px; margin-bottom: 2rem; }
+        .module-section { padding: 2rem; border-radius: 8px; margin-bottom: 2rem; box-shadow: 7px 7px 27px 2px #000000;}
         body.light-mode .module-section { background-color: var(--card-bg-light); border: 1px solid var(--border-color-light); }
         body.dark-mode .module-section { background-color: var(--card-bg-dark); border: 1px solid var(--border-color-dark); }
         .module-section h2 { margin-top: 0; color: var(--accent-color); border-bottom: 2px solid var(--accent-color); padding-bottom: 0.5rem; }
