--- a/modulos/simil.html
+++ b/modulos/simil.html
@@ -97,7 +97,7 @@
         </section>
 
         <section class="module-section">
-            <h2><i class="fa-solid fa-book-bible"></i>3. Símiles en la Biblia (Reina Valera 1960)</h2>
+            <h2><i class="fa-solid fa-book"></i>3. Símiles en la Biblia (Reina Valera 1960)</h2>
             <div class="bible-example">
                 <em>"Será <mark>como</mark> árbol plantado junto a corrientes de aguas, Que da su fruto en su tiempo, Y su hoja no cae..." (Salmo 1:3)</em>
                 <p><i class="fa-solid fa-magnifying-glass-chart"></i><strong>Análisis:</strong> La persona justa (Término Real) se compara explícitamente con un "árbol frondoso" (Término Imaginario) usando el nexo "como". La semejanza radica en la prosperidad, estabilidad y capacidad de dar fruto que ambos poseen gracias a estar conectados a una fuente de vida (Dios / corrientes de aguas).</p>
