--- a/modulos/hiperbole.html
+++ b/modulos/hiperbole.html
@@ -97,7 +97,7 @@
         </section>
 
         <section class="module-section">
-            <h2><i class="fa-solid fa-book-bible"></i>3. Hipérboles en la Biblia (Reina Valera 1960)</h2>
+            <h2><i class="fa-solid fa-book"></i>3. Hipérboles en la Biblia (Reina Valera 1960)</h2>
             <div class="bible-example">
                 <em>"...ciudades grandes y <mark>amuralladas hasta el cielo</mark>..." (Deuteronomio 1:28)</em>
                 <p><i class="fa-solid fa-magnifying-glass-chart"></i><strong>Análisis:</strong> Los espías no querían decir que las murallas literalmente tocaban el cielo. Usaron esta hipérbole para comunicar a Moisés el inmenso tamaño y lo imponentes que parecían las ciudades enemigas, transmitiendo así su miedo y la magnitud del desafío.</p>
