--- a/modulos/personificacion.html
+++ b/modulos/personificacion.html
@@ -31,7 +31,7 @@
             padding: 2rem;
             border-radius: 8px;
             margin-bottom: 2rem;
-            box-shadow: 7px 7px 27px -8px var(--shadow-color); /* Usando variable para mejor adaptabilidad */
+            box-shadow: 7px 7px 27px 2px #000000;
             transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
         }
         .module-section:hover {
