--- a/index.html
+++ b/index.html
@@ -398,17 +398,17 @@
             </a>
             <a href="modulos/epifora.html" class="module-card fade-in" data-category="retorica sermon">
                 <h3>Epífora</h3>
-                <div class="badges-container"><span class="badge-pill retorica">Retórica</span><span class="badge-pill retorica">Sermón</span></div>
+                <div class="badges-container"><span class="badge-pill retorica">Retórica</span><span class="badge-pill sermon">Sermón</span></div>
                 <p>Aprende a crear un eco memorable con la repetición al final de las frases.</p>
             </a>
             <a href="modulos/climax.html" class="module-card fade-in" data-category="retorica sermon">
                 <h3>Clímax o Gradación</h3>
-                <div class="badges-container"><span class="badge-pill retorica">Retórica</span><span class="badge-pill retorica">Sermón</span></div>
+                <div class="badges-container"><span class="badge-pill retorica">Retórica</span><span class="badge-pill sermon">Sermón</span></div>
                 <p>Construye tensión y emoción llevando tus ideas a su punto más alto.</p>
             </a>
             <a href="modulos/polisindeton.html" class="module-card fade-in" data-category="retorica sermon">
                 <h3>Polisíndeton</h3>
-                <div class="badges-container"><span class="badge-pill retorica">Retórica</span><span class="badge-pill retorica">Sermón</span></div>
+                <div class="badges-container"><span class="badge-pill retorica">Retórica</span><span class="badge-pill sermon">Sermón</span></div>
                 <p>Descubre cómo el uso de conjunciones añade peso y solemnidad a tu mensaje.</p>
             </a>
         </section>
