--- a/modulos/metafora.html
+++ b/modulos/metafora.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
         
     <!-- Enlace al archivo CSS externo -->
-    <link rel="stylesheet" href="css/modules.css">
+    <link rel="stylesheet" href="../css/modules.css">
 </head>
 <body>
 
