--- a/index.html
+++ b/index.html
@@ -411,6 +411,25 @@
                 <div class="badges-container"><span class="badge-pill retorica">Retórica</span><span class="badge-pill sermon">Sermón</span></div>
                 <p>Descubre cómo el uso de conjunciones añade peso y solemnidad a tu mensaje.</p>
             </a>
+            <a href="modulos/paralelismo.html" class="module-card fade-in" data-category="literariaretorica sermon">
+                <h3>Paralelismo</h3>
+                <div class="badges-container">
+                    <span class="badge-pill literaria">Literaria</span>
+                    <span class="badge-pill retorica">Retórica</span>
+                    <span class="badge-pill sermon">Sermón</span>
+                </div>
+                <p>Refuerza ideas y ritmo mediante la repetición de estructuras similares.</p>
+            </a>
+
+            <a href="modulos/asindeton.html" class="module-card fade-in" data-category="retorica sermon">
+                <h3>Asíndeton</h3>
+                <div class="badges-container">
+                    <span class="badge-pill retorica">Retórica</span>
+                    <span class="badge-pill sermon">Sermón</span>
+                </div>
+                <p>Intensifica el ritmo y la fuerza del discurso eliminando conjunciones.</p>
+            </a>
+
         </section>
     </main>
 
