--- a/index.html
+++ b/index.html
@@ -430,6 +430,15 @@
                 <p>Intensifica el ritmo y la fuerza del discurso eliminando conjunciones.</p>
             </a>
 
+            <a href="modulos/conector.html" class="module-card fade-in" data-category="retorica sermon">
+                <h3>Conectores</h3>
+                <div class="badges-container">
+                    <span class="badge-pill retorica">Retórica</span>
+                    <span class="badge-pill sermon">Sermón</span>
+                </div>
+                <p>Une temáticas, conecta ideas.</p>
+            </a>
+
         </section>
     </main>
 
