--- a/index.html
+++ b/index.html
@@ -449,6 +449,14 @@
                 <p>Diviértete y mejora tu dicción con estos retos lingüísticos.</p>
             </a>
 
+            <a href="modulos/pronunciacion.html" class="module-card fade-in" data-category="retorica sermon">
+                <h3>Pronunciación y vocalización</h3>
+                <div class="badges-container">
+                    <span class="badge-pill retorica">Retórica</span>
+                    <span class="badge-pill sermon">Sermón</span>
+                </div>
+                <p>Mejora el ritmo, dicción, silabeo y toda tu técnica de vocalización.</p>
+            </a>
         </section>
     </main>
 
