--- a/modulos/pronunciacion.html
+++ b/modulos/pronunciacion.html
@@ -465,7 +465,7 @@
 </head>
 <body>
     <header class="main-header">
-        <a href="../../index.html" class="back-link">← Volver al inicio</a>
+        <a href="../index.html" class="back-link">← Volver al inicio</a>
         <h1>Técnicas de Pronunciación y Silabeo</h1>
         <div id="theme-toggle" class="theme-toggle-switch">
             <div class="sun"></div>
