--- a/index.html
+++ b/index.html
@@ -457,6 +457,14 @@
                 </div>
                 <p>Mejora el ritmo, dicción, silabeo y toda tu técnica de vocalización.</p>
             </a>
+            <a href="modulos/preguntas.html" class="module-card fade-in" data-category="retorica sermon">
+                <h3>Preguntas retóricas</h3>
+                <div class="badges-container">
+                    <span class="badge-pill retorica">Retórica</span>
+                    <span class="badge-pill sermon">Sermón</span>
+                </div>
+                <p>Mejora impacto en el discurso, invita a reflexionar a los demás.</p>
+            </a>
         </section>
     </main>
 
