--- a/modulos/preguntas.html
+++ b/modulos/preguntas.html
@@ -180,21 +180,21 @@
                 <div class="resource-col">
                     <h3 style="color: var(--accent-color);"><i class="fa-solid fa-book-bible"></i> Bíblicas (RVR 1960)</h3>
                     <ul>
-                        <li><i class="fa-solid fa-bible fa-fw"></i> <strong>Génesis 18:14</strong> - ¿Hay para Dios alguna cosa difícil?</li>
-                        <li><i class="fa-solid fa-bible fa-fw"></i> <strong>Números 11:23</strong> - ¿Acaso se ha acortado la mano de Jehová?</li>
-                        <li><i class="fa-solid fa-bible fa-fw"></i> <strong>1 Samuel 17:29</strong> - ¿No es esto mero hablar?</li>
-                        <li><i class="fa-solid fa-bible fa-fw"></i> <strong>Job 11:7</strong> - ¿Descubrirás tú los secretos de Dios?</li>
-                        <li><i class="fa-solid fa-bible fa-fw"></i> <strong>Job 38:4</strong> - ¿Dónde estabas tú cuando yo fundaba la tierra?</li>
-                        <li><i class="fa-solid fa-bible fa-fw"></i> <strong>Salmos 27:1</strong> - Jehová es la fortaleza de mi vida; ¿de quién he de atemorizarme?</li>
-                        <li><i class="fa-solid fa-bible fa-fw"></i> <strong>Salmos 121:1</strong> - ¿De dónde vendrá mi socorro?</li>
-                        <li><i class="fa-solid fa-bible fa-fw"></i> <strong>Jeremías 23:29</strong> - ¿No es mi palabra como fuego?</li>
-                        <li><i class="fa-solid fa-bible fa-fw"></i> <strong>Jeremías 32:27</strong> - He aquí que yo soy Jehová... ¿habrá algo que sea difícil para mí?</li>
-                        <li><i class="fa-solid fa-bible fa-fw"></i> <strong>Mateo 16:26</strong> - ¿Qué aprovechará al hombre, si ganare todo el mundo...?</li>
-                        <li><i class="fa-solid fa-bible fa-fw"></i> <strong>Marcos 4:40</strong> - ¿Por qué estáis así amedrentados? ¿Cómo no tenéis fe?</li>
-                        <li><i class="fa-solid fa-bible fa-fw"></i> <strong>Romanos 8:31</strong> - Si Dios es por nosotros, ¿quién contra nosotros?</li>
-                        <li><i class="fa-solid fa-bible fa-fw"></i> <strong>Romanos 8:33</strong> - ¿Quién acusará a los escogidos de Dios?</li>
-                        <li><i class="fa-solid fa-bible fa-fw"></i> <strong>1 Corintios 6:19</strong> - ¿O ignoráis que vuestro cuerpo es templo del Espíritu Santo?</li>
-                        <li><i class="fa-solid fa-bible fa-fw"></i> <strong>Hebreos 2:3</strong> - ¿Cómo escaparemos nosotros, si descuidamos una salvación tan grande?</li>
+                        <li><i class="fa-solid fa-book fa-fw"></i> <strong>Génesis 18:14</strong> - ¿Hay para Dios alguna cosa difícil?</li>
+                        <li><i class="fa-solid fa-book fa-fw"></i> <strong>Números 11:23</strong> - ¿Acaso se ha acortado la mano de Jehová?</li>
+                        <li><i class="fa-solid fa-book fa-fw"></i> <strong>1 Samuel 17:29</strong> - ¿No es esto mero hablar?</li>
+                        <li><i class="fa-solid fa-book fa-fw"></i> <strong>Job 11:7</strong> - ¿Descubrirás tú los secretos de Dios?</li>
+                        <li><i class="fa-solid fa-book fa-fw"></i> <strong>Job 38:4</strong> - ¿Dónde estabas tú cuando yo fundaba la tierra?</li>
+                        <li><i class="fa-solid fa-book fa-fw"></i> <strong>Salmos 27:1</strong> - Jehová es la fortaleza de mi vida; ¿de quién he de atemorizarme?</li>
+                        <li><i class="fa-solid fa-book fa-fw"></i> <strong>Salmos 121:1</strong> - ¿De dónde vendrá mi socorro?</li>
+                        <li><i class="fa-solid fa-book fa-fw"></i> <strong>Jeremías 23:29</strong> - ¿No es mi palabra como fuego?</li>
+                        <li><i class="fa-solid fa-book fa-fw"></i> <strong>Jeremías 32:27</strong> - He aquí que yo soy Jehová... ¿habrá algo que sea difícil para mí?</li>
+                        <li><i class="fa-solid fa-book fa-fw"></i> <strong>Mateo 16:26</strong> - ¿Qué aprovechará al hombre, si ganare todo el mundo...?</li>
+                        <li><i class="fa-solid fa-book fa-fw"></i> <strong>Marcos 4:40</strong> - ¿Por qué estáis así amedrentados? ¿Cómo no tenéis fe?</li>
+                        <li><i class="fa-solid fa-book fa-fw"></i> <strong>Romanos 8:31</strong> - Si Dios es por nosotros, ¿quién contra nosotros?</li>
+                        <li><i class="fa-solid fa-book fa-fw"></i> <strong>Romanos 8:33</strong> - ¿Quién acusará a los escogidos de Dios?</li>
+                        <li><i class="fa-solid fa-book fa-fw"></i> <strong>1 Corintios 6:19</strong> - ¿O ignoráis que vuestro cuerpo es templo del Espíritu Santo?</li>
+                        <li><i class="fa-solid fa-book fa-fw"></i> <strong>Hebreos 2:3</strong> - ¿Cómo escaparemos nosotros, si descuidamos una salvación tan grande?</li>
                     </ul>
                 </div>
             </div>
