--- a/modulos/preguntas.html
+++ b/modulos/preguntas.html
@@ -178,7 +178,7 @@
                 
                 <!-- Columna: Bíblicas -->
                 <div class="resource-col">
-                    <h3 style="color: var(--accent-color);"><i class="fa-solid fa-book-bible"></i> Bíblicas (RVR 1960)</h3>
+                    <h3 style="color: var(--accent-color);"><i class="fa-solid fa-book"></i> Bíblicas (RVR 1960)</h3>
                     <ul>
                         <li><i class="fa-solid fa-book fa-fw"></i> <strong>Génesis 18:14</strong> - ¿Hay para Dios alguna cosa difícil?</li>
                         <li><i class="fa-solid fa-book fa-fw"></i> <strong>Números 11:23</strong> - ¿Acaso se ha acortado la mano de Jehová?</li>
